# factor-forge

./: .coverage  .gitignore  PROJECT_SPEC.txt  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml
dist-v0.1.2-final/: factor_forge_quant-0.1.2-py3-none-any.whl
dist-v0.1.2-patched/: factor_forge_quant-0.1.2-py3-none-any.whl
dist-v0.5.0/: factor_forge_quant-0.5.0-py3-none-any.whl
docs/: api.md  dashboard.md  factors.md  index.md  quickstart.md  report.md
docs/blog/: factor-zoo-2020s.md
factor_forge/: __init__.py
factor_forge/analytics/: __init__.py  correlation.py  decay.py  factor_ic.py  metrics.py  regimes.py
factor_forge/backtest/: __init__.py  engine.py  portfolio.py
factor_forge/cli/: __init__.py  dashboard.py  research_report.py  run_backtest.py
factor_forge/dashboard/: __init__.py  app.py
factor_forge/data/: __init__.py  base.py  cache.py  databento.py  loader.py  polygon.py  survivorship.py
factor_forge/factors/: __init__.py  base.py  implementations.py  preprocessor.py  registry.py
factor_forge/ml/: __init__.py  conformal.py  ensemble.py  features.py  selection.py  walk_forward.py
factor_forge/viz/: __init__.py  _helpers.py  cum_returns.py  decile_bars.py  drawdown.py  factor_corr.py  ic_heatmap.py  reports.py  research_report.py
notebooks/: 01_quickstart.ipynb  02_factor_zoo.ipynb  03_ml_ensemble.ipynb
tests/: test_deep_application.py
tests/analytics/: test_decay.py  test_metrics.py
tests/backtest/: test_engine.py  test_portfolio.py
tests/cli/: test_report_cli.py  test_run_backtest.py
tests/dashboard/: test_dashboard.py
tests/data/: test_cache.py  test_loader.py  test_survivorship.py
tests/factors/: test_factors.py
tests/ml/: test_ml.py
tests/viz/: test_research_report.py  test_viz.py
