[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "factor-forge-quant"
version = "0.1.2"
description = "Modern, reproducible factor zoo replication engine with transaction costs, decay analysis, and ML ensembles"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Satyam Das", email = "satyamdas03@gmail.com" }]
requires-python = ">=3.11"
keywords = ["quantitative-finance", "factor-investing", "backtesting", "machine-learning", "cross-sectional"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "numpy>=1.24,<3.0",
    "pandas>=2.0",
    "requests>=2.31",
    "scipy>=1.11",
    "statsmodels>=0.14",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
data = [
    "databento>=0.80.0",
    "yfinance>=0.2.0",
]
ml = [
    "lightgbm>=4.0",
    "xgboost>=2.0",
    "mapie>=0.8",
]
viz = [
    "matplotlib>=3.7",
    "plotly>=5.18",
]
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.24",
]
dev = [
    "factor-forge-quant[data,ml,viz,docs]",
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4.0",
    "mypy>=1.11.0",
    "build>=1.0",
    "twine>=5.0",
]
all = [
    "factor-forge-quant[dev]",
]

[project.urls]
Homepage = "https://github.com/satyamdas03/factor-forge"
Repository = "https://github.com/satyamdas03/factor-forge"
Issues = "https://github.com/satyamdas03/factor-forge/issues"
Documentation = "https://satyamdas03.github.io/factor-forge/"

[project.scripts]
factor-forge = "factor_forge.cli.run_backtest:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["factor_forge*"]
exclude = ["tests*", "notebooks*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["factor_forge"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
# NumPy 2.1+ stubs use Python 3.12 "type" statement syntax; target 3.12 lets mypy
# parse them while the project still supports Python 3.11+ at runtime.
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
